Feat: Implemented clear grid feature

--- a/main.css
+++ b/main.css
@@ -2,7 +2,9 @@ body {
     height: 100vh; /* Take up full viewport height */
     margin: 0; /* Remove default browser margin */
     display: flex;
-    justify-content: center; /* Center horizontally */
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
     
   }
 
@@ -16,15 +18,35 @@ body {
 
 }
 
+.reset-container{
+    display: flex;
+    height: 100px;
+    width: 640px;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
 .row {
     display: flex;
     height: 40px;
     flex: 1;
-    border: solid grey 1px;
+    border: solid rgb(236, 231, 231) 1px;
 }
 
 .column {
     
     width: 40px;
-    border: solid grey 1px;
+    border: solid rgb(236, 231, 231) 1px;
+}
+
+
+
+
+.column.hovered {
+    background-color: black;
+}
+
+button {
+    height: 50px;
 }
